# PaaS

./: .gitmodules  README  README.markdown  receive.py  send.py
libstrophe/: Makefile.am  libstrophe.la  libstrophe.pc  send.c
libstrophe/.libs/: libstrophe.exp  libstrophe.lai
libstrophe/backup/: send.c~
libstrophe/examples/: send.c
libstrophe/examples/.deps/: examples_active-active.Po  examples_basic-basic.Po  examples_bot-bot.Po  examples_component-component.Po  examples_roster-roster.Po  examples_send-send.Po  examples_uuid-uuid.Po  examples_xiao-xiao.Po
libstrophe/examples/.libs/: active  basic  bot  component  lt-send  lt-xiao  roster  send  uuid  xiao
libstrophe/examples/backup/: active.c~  bot.c~  send.c~
libstrophe/src/: libstrophe_la-auth.lo  libstrophe_la-conn.lo  libstrophe_la-ctx.lo  libstrophe_la-event.lo  libstrophe_la-handler.lo  libstrophe_la-hash.lo  libstrophe_la-jid.lo  libstrophe_la-md5.lo  libstrophe_la-parser_expat.lo  libstrophe_la-rand.lo  libstrophe_la-sasl.lo  libstrophe_la-scram.lo  libstrophe_la-sha1.lo  libstrophe_la-snprintf.lo  libstrophe_la-sock.lo  libstrophe_la-stanza.lo  libstrophe_la-thread.lo  libstrophe_la-tls_openssl.lo  libstrophe_la-util.lo  libstrophe_la-uuid.lo
libstrophe/src/.deps/: libstrophe_la-auth.Plo  libstrophe_la-conn.Plo  libstrophe_la-ctx.Plo  libstrophe_la-event.Plo  libstrophe_la-handler.Plo  libstrophe_la-hash.Plo  libstrophe_la-jid.Plo  libstrophe_la-md5.Plo  libstrophe_la-parser_expat.Plo  libstrophe_la-rand.Plo  libstrophe_la-sasl.Plo  libstrophe_la-scram.Plo  libstrophe_la-sha1.Plo  (+7 more)
xmpp/: send.py  (+2 more)
(+378 files in other folders)
